--- a/v1/views/spots.ejs
+++ b/v1/views/spots.ejs
@@ -1,9 +1,35 @@
-<h1>Study Spots</h1>
+<%- include("partials/header") %>
 
-<% spots.forEach((spot) => { %>
- <div>
-    <h4> <%= spot.name %> </h4> 
-    <img src= "<%= spot.image %>">
- </div>
+<div class="container">
+   <header class="jumbotron">
+      <div class="container">
+         <h1>Study Spots</h1>
+         <p>Find th perfect study spot for you!</p>
+         <p>
+            <a class="btn btn-lg btn-primary" href="/spots/new">Add New Study Spot</a>
+         </p>
+      </div>
+   </header>
+   
+   <div class='row text-center' style="display:flex; flex-wrap: wrap">
+      <% spots.forEach((spot) => { %>
+       <div class="col-md-3 col-sm-6">
+         <div class="card" style="width: 18rem;">
+            <img  width='300px' src="<%= spot.image %>">
+            <div class="card-body">
+               <h5 class="card-title"><%= spot.name %></h5>
+               <a href="#" class="btn btn-primary">Go somewhere</a>
+             </div>
+         </div>
+       </div>
+   
+       <% }) %>      
+   </div>
+   
+</div>
 
-    <% }) %>
+
+
+
+
+    <%- include("partials/footer") %>
