--- a/v2/views/partials/header.ejs
+++ b/v2/views/partials/header.ejs
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>StudySpot</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/stylesheets/main.css">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
