--- a/v2/views/spots/new.ejs
+++ b/v2/views/spots/new.ejs
@@ -13,7 +13,7 @@
                 </div>
                 <div class="form-group">
                 <div class="form-group">
-                    <input class="form-control" type="text" name='description' placeholder="description url">
+                    <input class="form-control" type="text" name='description' placeholder="description">
                 </div>
                     <button class="btn btn-block btn-lg btn-warning">Submit!</button>
                 </div>
