--- a/v2/views/spots/show.ejs
+++ b/v2/views/spots/show.ejs
@@ -21,13 +21,17 @@
                             <p> 
                                 <em> Submitted by: <%= spot.author.username %> </em>
                             </p>
+                            <a class="btn btn-sm btn-warning" href="/spots/<%= spot._id %>/edit">✎ Edit</a>
+                            <form id='delete-form' action="/spots/<%= spot._id %>/?_method=DELETE" method="POST">
+                                <button class="btn btn-danger btn-sm float-right">Delete ✖︎ </button>
+                            </form>
                     </div>
                     </div>
         </div>
         <div class="card">
             <div class="text-right">
                 <a class="btn btn-primary" href="<%= spot._id %>/comments/new"> + Comment</a>
-                <hr>
+                
             </div>
         
             <% spot.comments.forEach(comment => { %>
