--- a/app/views/spots/show.ejs
+++ b/app/views/spots/show.ejs
@@ -23,7 +23,7 @@
                             </p>
                             <% if(user && spot.author.id.equals(user._id)) {%>
                                 <a class="btn btn-sm btn-warning" href="/spots/<%= spot._id %>/edit">✎ Edit</a>
-                                <form id='delete-form' action="/spots/<%= spot._id %>/?_method=DELETE" method="POST">
+                                <form class='delete-form' action="/spots/<%= spot._id %>/?_method=DELETE" method="POST">
                                     <button class="btn btn-danger btn-sm float-right">Delete ✖︎ </button>
                                 </form>
                             <% }%>
@@ -31,7 +31,7 @@
                     </div>
         </div>
         <div class="card">
-            <div class="text-right">
+            <div class="text-right commentBox">
                 <a class="btn btn-primary" href="<%= spot._id %>/comments/new"> + Comment</a>
                 
             </div>
@@ -44,6 +44,15 @@
                         <p>
                             <%= comment.text %>
                         </p>
+                        <% if(user && comment.author.id.equals(user._id)) {%>
+                        <a class="btn btn-xs btn-warning" 
+                            href="/spots/<%= spot._id %>/comments/<%=comment._id%>/edit">
+                            ✎
+                        </a>
+                        <form class="delete-form" action='/spots/<%= spot._id %>/comments/<%=comment._id%>?_method=DELETE' method="POST">
+                            <input type="submit" class="btn btn-danger btn-xs" value='✖︎'>
+                        </form>
+                        <% } %>
                     </div>
                 </div>
             <%  }) %>
