landing page styling

--- a/app/views/landing.ejs
+++ b/app/views/landing.ejs
@@ -1,10 +1,15 @@
 <%- include("partials/header") %>
 
+<div class="container">
+    <header class="jumbotron landingHero">
+       <div class="container">
+          <h1><i class="fa fa-book" aria-hidden="true">  </i> Landing Page</h1>
+          <p>Welcome to Study Spot. Let's Find th perfect study spot for you!</p>
+          <p>
+             <a class="btn btn-lg btn-primary" href="/spots">All Study Spots</a>
+          </p>
+       </div>
+    </header>
 
-<h1> Landing Page </h1>
-
-<p>Welcome to Study Spot</p>
-
-<a href="/spots">view all spots</a>
 
 <%- include("partials/footer") %>
