--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -4,6 +4,7 @@
         <title>StudySpot</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/main.css">
+        <script src="https://use.fontawesome.com/150fe22bd9.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
