--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -2,6 +2,13 @@ body {
     background-color:lavender;
 }
 
+.landingHero {
+    background-image: url("https://i.imgur.com/nhHbsiw.png");
+    background-size: cover;
+    color: white;
+    position: center;
+}
+
 .card img {
     width: 100%;
 }
