--- a/app/views/spots/index.ejs
+++ b/app/views/spots/index.ejs
@@ -2,9 +2,9 @@
 
 
 <div class="container">
-   <header class="jumbotron">
+   <header class="jumbotron jumbotron-fluid">
       <div class="container">
-         <h1>Study Spots</h1>
+         <h1><i class="fa fa-book" aria-hidden="true">  </i> Study Spots</h1>
          <p>Find th perfect study spot for you!</p>
          <p>
             <a class="btn btn-lg btn-primary" href="/spots/new">Add New Study Spot</a>
